:meat_on_bone: Fixes as follows: - fixed up some minor padding / css issues where subgrid is not supported on safari/chrome - removed extraneous / outdated copy under the first set of covid guidelines - the css gradient on the right hand side, underneath the copy felt too bright against the white text. opacity in the gradient color values adjusted to be more opaque - commented code in css files removed

--- a/src/cube-styles/layouts/_heroInfo.scss
+++ b/src/cube-styles/layouts/_heroInfo.scss
@@ -1,15 +1,14 @@
 //
 // Hero Section
 
-$tagline-height: 40.25rem;
-// $footer-height: calc(#{$tagline-height} / 7);
+$tagline-height: 48.25rem; //TODO: Fix this magic number
+
 
 @import 'hero/heroButton';
 @import 'hero/addressFooter';
 
 
 .hero {
-  // --footer-height: calc(#{$tagline-height} / 7);
   --footer-height: 35vh;
   @media screen and (max-width: $medium-screen) {
     background-image: url('https://res.cloudinary.com/toupeeproofbullets/image/upload/c_crop,g_center,h_621,w_414,q_50,dpr_auto/v1603209212/ilnido-repo/diningRoomNECrop.jpg');
@@ -19,8 +18,7 @@ $tagline-height: 40.25rem;
   background-size: cover;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  // grid-template-rows: minmax($tagline-height, 1fr) minmax(var(--footer-height), 1fr);
-  grid-template-rows: minmax($tagline-height, 2fr) minmax(100px, auto);
+    grid-template-rows: minmax($tagline-height, 2fr) minmax(100px, auto);
   & > * {
     color: $nido-white;
     grid-column: 2 / 3;
@@ -31,9 +29,8 @@ $tagline-height: 40.25rem;
   }
 
   .content {
-    background-image: linear-gradient(237deg, hsla(230, 60%, 54%, 0.5) 8%, hsla(304, 52%, 55%, 0.5) 63%, hsla(22, 100%, 56%, 0.534) 100%);
+    background-image: linear-gradient(237deg, hsla(230, 60%, 54%, 0.658) 8%, hsla(304, 52%, 55%, 0.61) 63%, hsla(22, 100%, 56%, 0.596) 100%);
     grid-row: 1 / 3;
-    // min-height: 130vh;
     text-shadow: 1px 1px 0 hsla(0, 0%, 0, 0.70), 0 2px 3px hsla(0, 0%, 0, 0.70);
   }
 
@@ -50,13 +47,12 @@ $tagline-height: 40.25rem;
   .tagline {
     :last-child {
       font-size: max(1rem, 1.35rem);
-      // @include easyPadMarg($spacer: padding,$in-end: 0, $in-start: 0);
     }
 
     .hours {
       font-size: var(--s1);
     }
-    :nth-child(5) { // TODO: fix this magick number
+    :nth-child(5) { // TODO: fix this magic number
       margin-top: 0;
       margin-block-start: 0;
     }
